# print-monitor

./: .gitignore  DOCKER.md  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/scripts/: export_schema.py
backend/src/printmonitor/: __init__.py  config.py  schema.py  store.py
backend/src/printmonitor/api/: app.py
backend/src/printmonitor/scraper/: runner.py  scrape.py
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: PrinterCards.tsx  PrinterTable.tsx  Table.tsx  columns.tsx
frontend/lib/: api.ts  locations.ts  severity.ts
