[project]
name = "printmonitor"
version = "0.0.0"
description = "BC Print Monitor backend (scraper + read API)"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "parsel>=1.9",
    "pydantic>=2",
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/printmonitor"]
